[package]
name = "nfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4.3"
bytes = "1.3.0"
nix = "0.26.2"
path-clean = "0.1.0"
rand = "0.8.5"
thiserror = "1.0.38"
url = "2.3.1"
wit-bindgen = { version = "0.7.0", default-features = false }
xdr-codec = "0.4.4"

[package.metadata.component]
target = { path = "wit" }

[package.metadata.component.dependencies]
