[package]
name = "nfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4.3"
bytes = "1.5.0"
nix = "0.27.1"
path-clean = "1.0.1"
rand = "0.8.5"
thiserror = "1.0.48"
url = "2.4.1"
wit-bindgen = "0.16.0"
xdr-codec = "0.4.4"

[package.metadata.component]
package = "component:nfs-rs"

[package.metadata.component.bindings]

[package.metadata.component.target]
path = "wit"
world = "nfs-rs"

[package.metadata.component.target.dependencies]
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:sockets" = { path = "wit/deps/sockets" }
