[package]
name = "nfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.5.0"
bytes = "1.6.0"
nix = "0.28.0"
path-clean = "1.0.1"
rand = "0.8.5"
thiserror = "1.0.58"
url = "2.5.0"
wit-bindgen = { version = "0.24.0" }
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
xdr-codec = "0.4.4"

[package.metadata.component]
package = "component:nfs-rs"

[package.metadata.component.bindings]

[package.metadata.component.target]
path = "wit"
world = "nfs-rs"

[package.metadata.component.target.dependencies]
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
